[package]
name = "v5_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
sha2 = "0.10.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
